# login_system

./: .gitignore
backend/: .env.example  package-lock.json  package.json
backend/sql/: init.sql
backend/src/: app.js  server.js
backend/src/config/: db.js
backend/src/controllers/: authController.js
backend/src/middleware/: errorHandler.js
backend/src/repositories/: userRepository.js
backend/src/services/: authService.js
backend/src/utils/: response.js
backend/tests/: auth.service.test.js
docker/: .env.docker.example  .env.prod.example  docker-compose.clone.yml  docker-compose.prod.yml  docker-compose.yml
docs/: Git与Docker实操笔记（login_system）.md  LiteLLM接入与代码解读.md  README.md  大模型流式输出问题与解决.md  项目架构与配置深度解析报告.md
docs/assets/git-docker/: README.md
docs/plans/: 2026-03-11-login-system-implementation.md  2026-03-12-dashboard-llm-streaming.md
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/: LoginForm.tsx
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/lib/: api.ts  authSession.ts  chatApi.ts
frontend/src/types/: chat.ts
llm_api/: .env.example  Dockerfile  pyproject.toml
llm_api/app/: main.py  schemas.py  settings.py
llm_api/login_system_llm_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
llm_api/tests/: test_chat_stream.py
openspec/: config.yaml
openspec/specs/project-learning-workflow/: spec.md
openspec/specs/register-api/: spec.md
(+10 files in other folders)
